Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -166,3 +166,116 @@
   title = {MDN Basic concepts of flexbox},
   url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
 }
+
+@article{seescoa,
+  title={Runtime transformations for modal independent user interface migration},
+  author={Luyten, Kris and Van Laerhoven, Tom and Coninx, Karin and Van Reeth, Frank},
+  journal={Interacting with Computers},
+  volume={15},
+  number={3},
+  pages={329--347},
+  year={2003},
+  publisher={Oxford University Press Oxford, UK}
+}
+
+@article{openuidl,
+  title={OpenUIDL, A User Interface Description Language for Runtime Omni-Channel User Interfaces},
+  author={Moldovan, Alex and Nicula, Vlad and Pasca, Ionut and Popa, Mihai and Namburu, Jaya Krishna and Oros, Anamaria and Brie, Paul},
+  journal={Proceedings of the ACM on Human-Computer Interaction},
+  volume={4},
+  number={EICS},
+  pages={1--52},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+
+@Online{ReactNative,
+  author   = {Facebook},
+  title    = {React Native},
+  year     = {2021},
+  url      = {https://reactnative.dev}
+}
+
+@Online{Flutter,
+  author   = {Google},
+  title    = {Flutter},
+  year     = {2021},
+  url      = {https://flutter.dev}
+}
+
+@Online{SquareSpace,
+  author   = {SquareSpace},
+  title    = {SquareSpace},
+  year     = {2021},
+  url      = {https://www.squarespace.com}
+}
+
+@Online{Wix,
+  author   = {Wix},
+  title    = {Wix},
+  year     = {2021},
+  url      = {https://www.wix.com}
+}
+
+@Online{Wordpress,
+  author   = {Wordpress},
+  title    = {Wordpress},
+  year     = {2021},
+  url      = {https://www.wordpress.com}
+}
+
+@Online{Drupal,
+  author   = {Drupal},
+  title    = {Drupal},
+  year     = {2021},
+  url      = {https://www.drupal.org}
+}
+
+@Online{Joomla,
+  author   = {Joomla},
+  title    = {Joomla},
+  year     = {2021},
+  url      = {https://www.joomla.org}
+}
+
+@Online{Contentful,
+  author   = {Contentful},
+  title    = {Contentful},
+  year     = {2021},
+  url      = {https://www.contentful.org}
+}
+
+@Online{Strapi,
+  author   = {Strapi},
+  title    = {Strapi},
+  year     = {2021},
+  url      = {https://www.strapi.io}
+}
+
+@Online{Gatsby,
+  author   = {Gatsby},
+  title    = {Gatsby},
+  year     = {2021},
+  url      = {https://www.gatsbyjs.com}
+}
+
+@Online{Nextjs,
+  author   = {Next.js},
+  title    = {Next.js},
+  year     = {2021},
+  url      = {https://www.nextjs.org}
+}
+
+@Online{Jekyll,
+  author   = {Jekyll},
+  title    = {Jekyll},
+  year     = {2021},
+  url      = {https://jekyllrb.com}
+}
+
+@Online{Retool,
+  author   = {Retool},
+  title    = {Retool},
+  year     = {2021},
+  url      = {https://retool.com}
+}
