--- a/thesis/paper/sections/2_relatedWork/relatedLibraries.tex
+++ b/thesis/paper/sections/2_relatedWork/relatedLibraries.tex
@@ -1,3 +1,8 @@
 % !TEX root = ../../thesis.tex
 
 \section{Frameworks and Libraries} \label{relatedTools}
+
+The issue of cross-platform development has long been an active research topic, especially after the rise of popularity in mobile devices, tablets and wearable technologies. There has been number of solutions that aims to solve this issue, and the traditional approach is hybrid application development. The idea of hybrid application development is to have a single codebase that can either run on multiple devices, or compile into an application that can natively run on multiple devices. Around this concept there has been many tools and libraries, and it has been gaining traction in the recent days.
+
+One of the most notable example to these libraries is React Native. React Native is a mobile application framework that works under React, and generates UI elements native to the platform that the code is being compiled against. Once an application is built with React Native, it can be compiled as a native iOS or an Android application \cite{ReactNative}. Another framework recently gaining traction is Flutter by Google, it takes the hybrid application development to the next level by supporting web, mobile environments and popular desktop environments \cite{Flutter}.
+
