--- a/thesis/paper/sections/3_solution/designPrinciples.tex
+++ b/thesis/paper/sections/3_solution/designPrinciples.tex
@@ -73,8 +73,6 @@ Last but not least, this principle was crucial to achieve cross-device compatibi
 
 \subsection{Shared Syntax}
 
-We designed IUIDL to be a generic markup language, agnostic of any platform or interaction type, and be based purely on XML so it could be consumed by all clients. This approach has many advantages, both for developers and users. It allows developers to create universal applications; once they start serving an Intertext application through an endpoint, any Intertext endpoint can consume the application through that endpoint. Moreover, it helps create a continual experience for the user; given that there is a shared layout system, UI elements will look and feel the same between Intertext clients. Figure \hl{TODO} and \hl{TODO} shows the similarities between Intertext web client and the command-line client.
-
-\hl{TODO Add screenshots that shows similarities between the web version and the cli version}
+We designed IUIDL to be a generic markup language, agnostic of any platform or interaction type, and be based purely on XML so it could be consumed by all clients. This approach has many advantages, both for developers and users. It allows developers to create universal applications; once they start serving an Intertext application through an endpoint, any Intertext endpoint can consume the application through that endpoint. Moreover, it helps create a continual experience for the user; given that there is a shared layout system, UI elements will look and feel the same between Intertext clients.
 
 Also, this approach allows existing Intertext applications to adopt to new Intertext clients as they are built in the future. At the time of this paper, Intertext web client and command-line client is ready, but as mentioned in the \nameref{futureWork} section, more Intertext clients are on the way. Thanks to this principle, Intertext clients will have immediate availability for the upcoming Intertext clients.
