--- a/thesis/paper/sections/5_evaluation/index.tex
+++ b/thesis/paper/sections/5_evaluation/index.tex
@@ -125,6 +125,28 @@ Both the input and display preference options work in the same way, by modifying
 \end{figure}
 
 
-\section{Methodology}
+\section{Evaluation}
 
-\section{Results}
+In this section, we explain how we conducted our user study for user evaluation. We first explain our methodology, and then share the results of our evaluation.
+
+\subsection{Methodology}
+
+We conducted our user study using surveys that we prepared in two separate stages. The first stage was to validate the problem we are intending to solve, and the second stage was to validate Intertext, the solution we offer in order to address these problems. 
+
+We utilized Amazon's Mechanical Turk (MTurk) service in order to obtain participants to our surveys. We stated the description and intention of each survey on MTurk survey page. Some of our surveys required special skills, for which we used features provided by MTurk that only allows participants with a special skill set to participate. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their "worker id" both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate or third party responses are eliminated.
+
+\paragraph{Stage 1: Validation of the Problem}
+
+In this stage, we aimed to validate the problem we are intending to solve. 
+
+\paragraph{Stage 2: Validation of the Solution}
+
+we  and the second stage is
+
+We used Google Forms to create the survey and obtain the results. 
+
+Our project targets two different user group; developers, and end-users. 
+
+Developers will use Intertext technology to develop products and services, and their 
+
+\subsection{Survey Results}
