Updates from Overleaf

--- a/thesis/paper/sections/5_evaluation/index.tex
+++ b/thesis/paper/sections/5_evaluation/index.tex
@@ -131,19 +131,21 @@ In this section, we explain how we conducted our user study for user evaluation.
 
 \subsection{Methodology}
 
-We conducted our user study using surveys that we prepared in two separate stages. The first stage was to validate the problem we are intending to solve, and the second stage was to validate Intertext, the solution we offer in order to address these problems. 
+We conducted our user study in the form of surveys. We used Google Forms to create the survey and manage the responses. In the surveys, we first gave some information and/or material to investigate, then followed it with mostly likert scale questions.
 
-We utilized Amazon's Mechanical Turk (MTurk) service in order to obtain participants to our surveys. We stated the description and intention of each survey on MTurk survey page. Some of our surveys required special skills, for which we used features provided by MTurk that only allows participants with a special skill set to participate. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their "worker id" both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate or third party responses are eliminated.
+We utilized Amazon's Mechanical Turk (MTurk) service in order to find participants. We stated the description and intentions of each survey on their respective survey page. Some of our surveys required special skills, for which we used features provided by MTurk that enables us to only target participants with special skills. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their \textit{worker id} both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate/third party responses are eliminated.
 
-\paragraph{Stage 1: Validation of the Problem}
+Our user evaluation was conducted in two stages. First stage was to validate the problems in our problem statement that we are intending to solve, and the second stage was to validate Intertext, the solution we offer in order to address these problems. 
 
-In this stage, we aimed to validate the problem we are intending to solve. 
+\paragraph{Stage 1: Problem Validation}
 
-\paragraph{Stage 2: Validation of the Solution}
+Here we aimed to validate the problem we are intending to solve. We first asked some optional questions to ask about the background of the participants; including their age, gender, country of origin and occupation. Then, we separated questions into groups for every main category in our \nameref{problemStatement} section. We directed this section only towards the end-users.
+
+\paragraph{Stage 2: Solution Validation}
 
 we  and the second stage is
 
-We used Google Forms to create the survey and obtain the results. 
+
 
 Our project targets two different user group; developers, and end-users. 
 
